2006-07-08  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py (ViewManager._build_main_window): restore tabs
	to their normal position

2006-07-07  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: add edit child/relationship options
	in the popup menu
	* src/DisplayTab/_EmbeddedList.py: break out menu specification to
	make it easier to override
	* src/glade/gramps.glade: remove unused objects
	* help/C/figures/place.png: update

2006-07-07  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix restoration of gallery settings

2006-07-06  Alex Roitman  <shura@phy.ucsf.edu>
	* data/gramps.schemas.in: Remove unused key.
	* src/Config/_GrampsConfigKeys.py: Regenerate file.
	* src/NameDisplay.py (NameDisplay._format_str_base): Document the
	format string interface.

2006-07-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: add cell renderer to combobox
	* help/C/gramps-manual.xml: update doc
	
2006-07-06  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (ViewManager.post_load_newdb): Register
	custom formats after loading the db.
	* src/GrampsCfg.py: Switch to use new formats (still in progress).
	* src/GrampsDb/_GrampsDbBase.py (GrampsDbBase.__init__): Set up
	custom name formats list.
	* src/GrampsDb/_DbUtils.py (db_copy): Copy custom name formats.
	* src/GrampsDb/_ReadXML.py (start_format): Parse custom formats.
	* src/GrampsDb/_WriteXML.py (write_name_formats): Add method.
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB._load_metadata) 
	(GrampsBSDDB._close_metadata): load and save name_formats.
	* src/Editors/_EditName.py (EditName._setup_fields): Use proper
	format lists.
	* src/NameDisplay.py: Support new name formats scheme.
	* src/RelLib/_Name.py (Name.DEFAULT_FORMATS): Add list of formats.

2006-07-05  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditChildRef.py: fix title
	* src/Editors/_EditFamily.py: call sequence for EditChildRef 