@@ -1,4 +1,6 @@
 2006-07-08  Don Allingham  <don@gramps-project.org>
+	* src/ScratchPad.py (ScratchPersonLink.tooltip): fix tooltip for
+	person
 	* src/ViewManager.py (ViewManager._build_main_window): restore tabs
 	to their normal position
 
